[workspace]
resolver = "2"

members = [
    "common",
    "query-parser",
    "grpc-service",
    "executor",
    "commander",
    "taskserver",
    "integration",
    "exec",
]

[profile.release]
lto = "fat"

[workspace.dependencies]
funtonic = { path = "./common" }
grpc-service = { path = "./grpc-service" }
exec = { path = "./exec" }
query-parser = { path = "./query-parser" }

clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-log = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
native-tls = { version = "0.2", features = ["vendored"] }
log4rs-gelf = "0.1.4"
structopt = "0.3"
http = "0.2"

tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
tokio-stream = "0.1"

crossbeam = "0.8"
itertools = "0.12"
os_info = "3.2"
