[workspace]
resolver = "2"

members = [
    "common",
    "query-parser",
    "grpc-service",
    "executor",
    "commander",
    "taskserver",
    "integration",
    "exec",
]

[profile.release]
lto = "fat"

[workspace.dependencies]
funtonic = { path = "./common" }
grpc-service = { path = "./grpc-service" }
exec = { path = "./exec" }
query-parser = { path = "./query-parser" }

clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-log = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
native-tls = { version = "0.2", features = ["vendored"] }
log4rs-gelf = "0.1.4"
http = "1"

tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
tokio-stream = "0.1"
crossbeam = "0.8"
itertools = "0.14"
os_info = "3.2"
rand = "0.9"
shellexpand = "3"
ring = "0.17"
chrono = "0.4"
data-encoding = "2.3"
bytes = "1"
get_if_addrs = "0.5"
rustbreak = { version = "2", features = ["yaml_enc", "ron_enc"] }
tempfile = "3"
nom = "8"
nom-language = "0.1"

# tonic/grpc stuff
tonic = { version = "0.14.1", features = ["tls-aws-lc"] }
tonic-build = "0.14.1"
prost = "0.14.1"
protobuf-src = "1.1.0+21.5"
tonic-prost-build = "0.14.1"
tonic-prost = "0.14.1"

# commander specific stuff
colored = "3"
indicatif = "0.18"
atty = "0.2"
prettytable-rs = "^0.10"
rustyline = "17"
directories = "^6.0.0"
shellish_parse = "2.2.0"
