[package]
name = "commander"
version = "0.21.6"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
query-parser = { workspace = true }
grpc-service = { workspace = true }
funtonic = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }

http = "0.2"
colored = "2"
indicatif = "0.17"
atty = "0.2"
prettytable-rs = "^0.10"
rustyline = "12"
directories = "^5.0.0"
shellish_parse = "2.2.0"
