[package]
name = "commander"
version = "0.22.2"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
query-parser = { workspace = true }
grpc-service = { workspace = true }
funtonic = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
http = { workspace = true }

colored = { workspace = true }
indicatif = { workspace = true }
atty = { workspace = true }
prettytable-rs = { workspace = true }
rustyline = { workspace = true }
directories = { workspace = true }
shellish_parse = { workspace = true }
