[package]
name = "funtonic"
version = "0.21.6"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
crossbeam = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
http = { workspace = true }
os_info = { workspace = true }
query-parser = { workspace = true }
grpc-service = { workspace = true }
exec = { workspace = true }
ring = { workspace = true }
chrono = { workspace = true }
data-encoding = { workspace = true }
bytes = { workspace = true }
get_if_addrs = { workspace = true }
rustbreak = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# required for testing ; importing grpc_service::prost won't work for an obscure proc macro related reason
prost = { workspace = true }
