[package]
name = "director"
version = "0.1.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2"
actix-rt="1"
actix-files = "0.2"
serde="1"
serde_derive="1"
structopt="0.3"
futures="0.3"
http="0.2"
funtonic={path="../common"}
tokio="0.2"
log4rs-gelf = "0.1"
