[package]
name = "exec"
version = "0.2.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
crossbeam="0.7.2"
tokio={version="0.2", features=["process", "sync", "rt-core", "io-util", "macros", "stream"]}
thiserror="1"
env_logger = "0.7"
futures="0.3"
