[package]
name = "exec"
version = "0.4.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
env_logger = "0.11"
futures = "0.3"
tokio-stream = "0.1"
