[package]
name = "exec"
version = "0.4.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
crossbeam = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
