[package]
name = "executor"
version = "0.20.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
query-parser = {path="../query-parser"}
grpc-service = {path="../grpc-service"}
funtonic = {path="../common"}
structopt="0.3"
thiserror="1"
anyhow="1"
log="0.4"
os_info = "3.2"
futures = "0.3"
http="0.2"
log4rs-gelf = "0.1.4"
native-tls = { version = "0.2", features=["vendored"] }
exec={path="../exec"}
serde_yaml="0.8"
base64="0.13"
tokio-stream="0.1"