[package]
name = "executor"
version = "0.21.6"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
query-parser = { workspace = true }
grpc-service = { workspace = true }
funtonic = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
exec = { workspace = true }
serde_yaml = { workspace = true }
log4rs-gelf = { workspace = true }
native-tls = { workspace = true }
structopt = { workspace = true }

tokio-stream = "0.1"
http = "0.2"
os_info = "3.2"
