[package]
name = "grpc-service"
version = "0.19.2"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
protobuf-src = { workspace = true }
