[package]
name = "integration"
version = "0.1.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commander={path="../commander"}
executor={path="../executor"}
taskserver={path="../taskserver"}
funtonic={path="../common"}
env_logger="0.9"
log="0.4"
futures="0.3"
base64="0.13"
reqwest = {version="0.11", features=["rustls-tls"]}
rustls="0.20"
tempfile="3"
anyhow="1"