[package]
name = "query-parser"
version = "0.4.1"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { workspace = true }
thiserror = { workspace = true }
nom-language = { workspace = true }
