[package]
name = "taskserver"
version = "0.19.1"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
query-parser = {path="../query-parser"}
grpc-service = {path="../grpc-service"}
funtonic = {path="../common"}
structopt="0.3"
tonic={version="0.2", features=["tokio-rustls", "tls"] }
thiserror="1"
tokio = {version="0.2", features=["full"]}
anyhow="1"
log="0.4"
futures = "0.3"
log4rs-gelf = "0.1.4"
native-tls = { version = "0.2", features=["vendored"] }

